| Summary: | ASTERISK-27938: [patch] Compile fails with `IPTOS_MINCOST' undeclared. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-06-23 01:31:51 | Date Closed: | 2018-07-10 06:22:59 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Addons/chan_ooh323 |
| Versions: | 13.21.1 15.4.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Solaris 11.3 | Attachments: | ( 0) solaris-chan_ooh323.patch |
| Description: | This is the same symptom and cause as in ASTERISK-11495. However, the implementation is not the same anymore. Therefore, this issue was re-introduced. Furthermore in Solaris, the Defines for SIOCGIF* are within the header file {{<sys/sockio.h>}}. The attached patch fixes both issues. With that the add-on channel {{chan_ooh323}} compiles in Solaris. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-06-23 01:31:52.825-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-07-10 06:22:59.849-0500 Change 9288 merged by Jenkins2: chan_ooh323: IPTOS_MINCOST is not defined on Solaris. [https://gerrit.asterisk.org/9288|https://gerrit.asterisk.org/9288] By: Friendly Automation (friendly-automation) 2018-07-10 06:27:08.389-0500 Change 9286 merged by Jenkins2: chan_ooh323: IPTOS_MINCOST is not defined on Solaris. [https://gerrit.asterisk.org/9286|https://gerrit.asterisk.org/9286] By: Friendly Automation (friendly-automation) 2018-07-10 06:31:51.666-0500 Change 9287 merged by Jenkins2: chan_ooh323: IPTOS_MINCOST is not defined on Solaris. [https://gerrit.asterisk.org/9287|https://gerrit.asterisk.org/9287] | ||