chan_ooh323: IPTOS_MINCOST is not defined on Solaris.

Furthermore, <sys/sockio.h> is required for SIOCGIF*.

ASTERISK-27938

Change-Id: Idc9153ece769944765b66122efb11728d8d8ebde